--- a/app/src/main/res/values-hi/strings-hi.xml
+++ b/app/src/main/res/values-hi/strings-hi.xml
@@ -5,14 +5,16 @@
     <string name = "date"> Date </string>
     <string name = "todo"> TODO </string>
     <string name = "welcome_user"> प्लेस फॉर फन </string>
-    <string name = "share"> Share </string>
+    <string name = "share"> शेयर </string>
     <string name = "next"> अगला </string>
+    <string name = "convert"> धर्मांतरित </string>
     <string name = "currency_converter"> मुद्रा परिवर्तक </string>
     <string name = "enter_amount"> राशि दर्ज करें </string>
     <string name = "usd"> USD </string>
     <string name = "search_ex_tenet"> खोज पूर्व। सिद्धांत </string>
     <string name = "search_movie_and_n_tv_shows_here"> यहां मूवी और \ n टीवी शो खोजें </string>
     <string name = "search"> Search </string>
+    <string name = "rating"> रेटिंग: - </string>
     <string name = "release"> Release: - </string>
     <string name = "about"> About </string>
     <string name = "feedback"> फ़ीडबैक </string>
@@ -20,4 +22,29 @@
     <string name = "ios"> iOS </string>
     <string name = "contact"> Contact </string>
     <string name = "settings"> Settings </string>
+
+    <string name = "log_in"> लॉग इन करें </string>
+    <string name = "enter_password"> पासवर्ड दर्ज करें </string>
+    <string name = "login"> लॉग इन करें </string>
+    <string name = "create_an_account"> एक खाता बनाएँ </string>
+    <string name = "this_project_is_about_news_and_information"> के बारे में </string>
+    <string name = "welcome"> आपका स्वागत है </string>
+    <string name = "search_movies"> फिल्में खोजें </string>
+    <string name = "currency_exchange"> करेंसी एक्सचेंज </string>
+    <string name = "memes"> Memes </string>
+    <string name = "news"> समाचार </string>
+    <string name = "you_are_ready_to_go"> आप रेडी टू गो! </string>
+    <string name = "we_do_like_aliens"> हम एलियंस की तरह करते हैं !!!</string>
+    <string name = "movie"> यहां मूवी और \ n टीवी शो देखें </string>
+    <string name = "searchs"> खोज </string>
+    <string name = "account"> नया खाता बनाएँ </string>
+    <string name = "enter"> ईमेल आईडी दर्ज करें </string>
+    <string name = "pswd"> पासवर्ड दर्ज करें </string>
+    <string name = "logins"> लॉगिन </string>
+    <string name = "signups"> साइन अप करें </string>
+    <string name = "weather"> मौसम </string>
+    <string name = "pressure"> दबाव </string>
+    <string name = "sunset"> सूर्य का अस्त होना </string>
+    <string name = "parthiban"> पार्थिबन </string>
+    <string name = "contacting"> संपर्क </string>
 </resources>
