--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:fontFamily="@font/abril_fatface"
-            android:text="Welcome"
+            android:text="@string/welcome"
             android:textColor="@android:color/background_light"
             android:textSize="34dp"
             android:textStyle="bold" />
@@ -78,7 +78,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
-                    android:text="News"
+                    android:text="@string/news"
                     android:layout_gravity="center"
                     android:textColor="#000000"
                     android:textSize="18dp"
@@ -118,7 +118,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
-                    android:text="Weather"
+                    android:text="@string/weather"
                     android:layout_gravity="center"
                     android:textColor="#000000"
                     android:textSize="18dp"
@@ -158,7 +158,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
-                    android:text="Memes"
+                    android:text="@string/memes"
                     android:layout_gravity="center"
                     android:textColor="#000000"
                     android:textSize="18dp"
@@ -198,7 +198,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
-                    android:text="Search Movies"
+                    android:text="@string/search_movies"
                     android:layout_gravity="center"
                     android:textColor="#000000"
                     android:textSize="18dp"
@@ -237,7 +237,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
-                    android:text="Currency Exchange"
+                    android:text="@string/currency_exchange"
                     android:layout_gravity="center"
                     android:textColor="#000000"
                     android:textSize="18dp"
