--- a/app/src/main/res/layout/contactlay.xml
+++ b/app/src/main/res/layout/contactlay.xml
@@ -13,7 +13,7 @@
         android:layout_height="57dp"
         android:layout_gravity="center"
         android:layout_margin="30dp"
-        android:text="Created By"
+        android:text="created_by"
         android:textColor="@color/colorAccent"
         android:textSize="32dp"
         android:textStyle="bold"
@@ -30,57 +30,7 @@
         android:layout_height="51dp"
         android:layout_gravity="center"
         android:layout_margin="30dp"
-        android:text="Parthiban"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="32dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.59"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/abouttext5"
-        android:layout_width="240dp"
-        android:layout_height="51dp"
-        android:layout_gravity="center"
-        android:layout_margin="30dp"
-        android:text="Sachin"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="32dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.561"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.595" />
-
-    <TextView
-        android:id="@+id/abouttext7"
-        android:layout_width="240dp"
-        android:layout_height="51dp"
-        android:layout_gravity="center"
-        android:layout_margin="30dp"
-        android:text="Saubhagya Ashish"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="32dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.561"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.692" />
-
-    <TextView
-        android:id="@+id/abouttext6"
-        android:layout_width="240dp"
-        android:layout_height="51dp"
-        android:layout_gravity="center"
-        android:layout_margin="30dp"
-        android:text="Parthiban"
+        android:text="@string/parthiban"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="32dp"
         android:textStyle="bold"
@@ -96,7 +46,7 @@
         android:layout_height="160dp"
         android:layout_gravity="center"
         android:layout_margin="30dp"
-        android:text="CONTACT"
+        android:text="@string/contacting"
         android:textAlignment="center"
         android:textColor="@color/colorWhite"
         android:textSize="32dp"
